# Camera

./: .gitignore  build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: btn_start_record.xml  btn_stop_record.xml  devide_bg.xml  ic_previous_page.xml  pictures_select_icon.xml  rounded_rectangle.xml  ruler_repeat.xml  vector_drawable_back.xml  vector_drawable_backup.xml  vector_drawable_close.xml  vector_drawable_complate.xml  vector_drawable_down.xml  vector_drawable_forward.xml  vector_drawable_frame.xml  vector_drawable_magzine.xml  vector_drawable_max.xml  vector_drawable_share.xml
app/src/main/res/drawable-nodpi/: vector_drawable_rectangle.xml  vector_drawable_save.xml
app/src/main/res/drawable-xhdpi/: vector_drawable_play.xml
gpuimage/: CMakeLists.txt  build.gradle
gpuimage/src/main/: AndroidManifest.xml
gpuimage/src/main/java/cn/m15/gpuimage/: GPUImage.java  GPUImage3x3ConvolutionFilter.java  GPUImage3x3TextureSamplingFilter.java  GPUImageAddBlendFilter.java  GPUImageAlphaBlendFilter.java  GPUImageBilateralFilter.java  GPUImageBoxBlurFilter.java  GPUImageBrightnessFilter.java  GPUImageBulgeDistortionFilter.java  GPUImageCGAColorspaceFilter.java  GPUImageChromaKeyBlendFilter.java  GPUImageColorBalanceFilter.java  GPUImageColorBlendFilter.java  GPUImageColorBurnBlendFilter.java  GPUImageColorDodgeBlendFilter.java  GPUImageColorInvertFilter.java  GPUImageColorMatrixFilter.java  GPUImageContrastFilter.java  GPUImageCrosshatchFilter.java  GPUImageDarkenBlendFilter.java  GPUImageDifferenceBlendFilter.java  GPUImageDilationFilter.java  GPUImageDirectionalSobelEdgeDetectionFilter.java  GPUImageDissolveBlendFilter.java  GPUImageDivideBlendFilter.java  GPUImageEmbossFilter.java  GPUImageExclusionBlendFilter.java  GPUImageExposureFilter.java  GPUImageFalseColorFilter.java  GPUImageFilter.java  GPUImageFilterGroup.java  GPUImageGammaFilter.java  GPUImageGaussianBlurFilter.java  GPUImageGlassSphereFilter.java  GPUImageGrayscaleFilter.java  GPUImageHalftoneFilter.java  GPUImageHardLightBlendFilter.java  GPUImageHazeFilter.java  GPUImageHighlightShadowFilter.java  GPUImageHueBlendFilter.java  (+49 more)
gpuimage/src/main/java/cn/m15/gpuimage/util/: TextureRotationUtil.java
gpuimage/src/main/jni/: yuv-decoder.c
gradle/wrapper/: gradle-wrapper.properties
(+182 files in other folders)
